# lupe

./: .gitignore  Cargo.toml
src/: app.rs  main.rs
src/audio/: devices.rs  mod.rs  router.rs
src/content/: mod.rs
src/effects/: gain.rs  mod.rs  none.rs  reverb.rs
src/gui/: inspector.rs  menu.rs  meters.rs  mod.rs  session.rs  theme.rs  toolbar.rs  track_settings.rs  tracks.rs  transport.rs  util.rs
src/gui/session/: input_settings_popup.rs  inspector.rs  metronome_popup.rs  pedalboard.rs  rename_project_popup.rs  sequencer_pattern_library.rs  sequencer_popup.rs  sequencer_sample_browser.rs  timeline.rs  top_bar.rs  track_row.rs  transport_popup.rs
src/pedals/: bassify.rs  distortion.rs  equalizer.rs  fuzz.rs  metronome.rs  mod.rs  phaser.rs  reverb.rs
src/project/: mod.rs
