[package]
name = "lupe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cpal = "0.15"
eframe = { version = "0.29", default-features = true, features = ["default_fonts", "glow"] }
hound = "3.5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
